@@ -11,4 +11,7 @@ iterations.tooltip = How many iterations to run? 0 = infinite.
 reverse_roles.label = Reverse roles between iterations
 reverse_roles.description = If enabled, roles will be reversed between iterations.
 reverse_roles.tooltip = If enabled, roles will be reversed between iterations.
+auto_stop.label = Auto-stop after goal is reached
+auto_stop.description = If enabled, plugin will stop after goal is reached.
+auto_stop.tooltip = If enabled, plugin will stop after goal is reached.
 
