@@ -10,3 +10,6 @@ iterations.tooltip = Ile iteracji przeprowadzić? 0 = nieskończoność.\nUWAGA:
 reverse_roles.label = Zamień role między iteracjami
 reverse_roles.description = Jeżeli włączone, role zostaną zamienione między iteracjami.
 reverse_roles.tooltip = Jeżeli włączone, role zostaną zamienione między iteracjami.
+auto_stop.label = Auto-stop po wykonaniu zadania
+auto_stop.description = Gdy włączone, plugin spróbuje zatrzymać działanie po wykonaniu zadania
+auto_stop.tooltip = Gdy włączone, plugin spróbuje zatrzymać działanie po wykonaniu zadania
